@@ -163,7 +163,7 @@
         </dependency>
         <dependency>
           <groupId>org.jboss.ws</groupId>
-          <artifactId>jbossws-jboss42</artifactId>
+          <artifactId>jbossws-jboss422</artifactId>
         </dependency>
       </dependencies>
       <build>
@@ -172,6 +172,40 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
               <argLine>-Djava.endorsed.dirs=${jboss422.home}/lib/endorsed</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    
+    
+    <!-- 
+    Name:  jboss423
+    Descr: JBoss-4.2.3 specific options  
+    -->
+    <profile>
+      <id>jboss423</id>
+      <properties>
+        <jboss.version>4.2.3.GA</jboss.version>
+        <jbossws.integration.target>jboss423</jbossws.integration.target>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.client</groupId>
+          <artifactId>jbossall-client</artifactId>
+          <version>${jboss.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.ws</groupId>
+          <artifactId>jbossws-jboss423</artifactId>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-Djava.endorsed.dirs=${jboss423.home}/lib/endorsed</argLine>
             </configuration>
           </plugin>
         </plugins>
